# basil

./: .gitignore  README.md  basil.code-workspace  docker-compose.yaml  run.sh
services/fin-serving-layer/: .dockerignore  .flake8  Dockerfile  README.md  app.py  app_config.py  pyproject.toml  requirements.txt  run.sh  run2.sh
services/fin-serving-layer/config/: app_config.py  exceptions.py
services/fin-serving-layer/fin_client/: base_fin_client.py  plaid_client.py  provider.py
services/fin-serving-layer/src/: api.py  app.py  dependencies.py  middleware.py
services/fin-serving-layer/src/clients/: firestore_client.py  plaid_client.py
services/fin-serving-layer/src/config/: app_config.py  environment.py  exceptions.py
services/fin-serving-layer/src/fin_client/model/: institution.py  link_token.py
services/fin-serving-layer/src/models/: account.py  institution.py  item.py  link_token.py  transaction.py  user.py
services/fin-serving-layer/src/routes/: fin_data.py  users.py
services/fin-serving-layer/src/utils/: logging.py  settings.py
ui/: .dockerignore  App.tsx  Dockerfile  app.json  babel.config.js  logger.ts  package-lock.json  package.json  run.sh  tsconfig.json
ui/clients/: FinClient.ts
ui/config/: AppConfig.ts  MissingConfigError.ts
ui/web/: .dockerignore  .eslintrc  .prettierrc.js  Dockerfile  README.md  package-lock.json  package.json  run.sh  tsconfig.json
ui/web/public/: index.html  manifest.json
ui/web/src/: App.tsx  index.tsx
ui/web/src/clients/: ApiError.ts  FinClient.ts  FinClientContext.tsx
ui/web/src/components/: HomePage.tsx  (+3 more)
(+4 files in other folders)
